k8s-deployments/userjava-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava
  namespace: api
  labels:
    app: userjava
    purpose: openhack-containers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
        - name: userjava
          image: registryckv0271.azurecr.io/userjava:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/secrets"
              readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "sql-password"
---

apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  namespace: api
spec:
  selector:
    app: userjava
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
