k8s-deployments/userprofile-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
  labels:
    app: userprofile
    purpose: openhack-containers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registryckv0271.azurecr.io/userprofile:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 128Mi
              cpu: 400m
---

apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
