k8s-deployments/ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: userjava-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port:
              number: 80
