k8s-deployments/api-network-policy-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: api
spec:
  podSelector:
    matchLabels:
      role: api
  ingress: []
